[package]
name = "rustii"
version = "0.4.2"
edition = "2024"

[dependencies]
ab_glyph = "0.2.29"
clap = "4.5.30"
image = "0.25.5"
imageproc = "0.25.0"
num_cpus = "1.16.0"
rascii_art = { version = "0.4.5", path = "RASCII" }
rayon = "1.10.0"
regex = "1.11.1"
threadpool = "1.8.1"
unicode-segmentation = "1.12.0"
